# Copyright (c) 2024 Di-Is
#
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php

[project]
name = "builder"
version = "0.1.0"
description = "faiss-gpu-wheels builder package"
authors = [{ name = "Di-Is", email = "rhoxbox@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["setuptools", "oldest-supported-numpy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
