# Copyright (c) 2024 Di-Is
#
# This software is released under the MIT License.
# http://opensource.org/licenses/mit-license.php
# 
# This file is created by the `generate_pyproject.py`. 

[build-system]
requires = ["scikit-build-core", "swig", "oldest-supported-numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "faiss-gpu-cu11"
version = "1.9.0.0"
requires-python = ">=3.9,<=3.12"
dependencies = [
    "numpy<2",
    "packaging",
    "tomli; python_version < '3.11'",
    "nvidia-cuda-runtime-cu11",
    "nvidia-cublas-cu11",
]
authors = [{ name = "Di-Is", email = "rhoxbox@gmail.com" }]
description = "A library for efficient similarity search and clustering of dense vectors."
license = { file = "../../LICENSE" }
readme = "../../README.md"
keywords = ["search nearest neighbors"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: NVIDIA CUDA :: 11",
]

[project.optional-dependencies]
fix-cuda = [
    'nvidia-cuda-runtime-cu11==11.8.89',
    'nvidia-cublas-cu11==11.11.3.6',
]

[project.urls]
faiss-gpu-wheels = "https://github.com/Di-Is/faiss-gpu-wheels"

[tool.scikit-build]
cmake.source-dir = "../../"
wheel.exclude = ["*.cxx"]
